--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
 
 <footer>
-    <div class"part-one">
+    <div class="part-one">
       <h3> Website Links</h3>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
