--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="logo">
     <img src='/images/logo.png'>
   </div>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -25,22 +26,20 @@
           <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/pages/portfolio.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/reviews.html">Reviews</a>
+          <a class="nav-link" href="/pages/reviews.html">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About</a>
+          <a class="nav-link" href="/pages/about.html">Contact</a>
         </li>
       </ul>
     </div>
     </div>
   </nav>
 
-  <div class="title">
-    <h1>Welcome to Sustainable Gardens</h1>
-  </div>
+  <h1 class = "title">Welcome to Sustainable Gardens</h1>
 
   <div class="food">
     <img src="/images/food.jpg">
@@ -60,11 +59,10 @@
     </div>
   </div>
 
-  <div class="work">
-
   <div class="description">
+    <img src="images/gardeners.jpg">
     <div class="words">
-      <h2> Welcome </h2>
+      <h2>Welcome </h2>
       <p> Sustainable Gardens is a family owned and operated business that has been
       serving the Valley of the Sun for over 15 years. Sustainable Gardens is renowed
       for offering affortable gardening installation and maintainance services including
@@ -81,8 +79,6 @@
       </ul>
   </div>
 
-  </div>
-
 <footer>
     <div class"part-one">
       <h3> Website Links</h3>
@@ -93,7 +89,7 @@
           <li><a href="/pages/about.html">About</a></li>
         </ul>
     </div>
-    <div class="part=two"> 
+    <div class="part=two">
       All rights reserved © 2020 Sustainable Gardens
     </div>
 </footer>
