Home Page Finished

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/portfolio.html">About</a>
+          <a class="nav-link" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/reviews.html">Services</a>
+          <a class="nav-link" href="/pages/services.html">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">Contact</a>
+          <a class="nav-link" href="/pages/contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -60,23 +60,52 @@
   </div>
 
   <div class="description">
-    <img src="images/gardeners.jpg">
+    <img class="size" src="images/gardeners.jpg">
     <div class="words">
       <h2>Welcome </h2>
       <p> Sustainable Gardens is a family owned and operated business that has been
-      serving the Valley of the Sun for over 15 years. Sustainable Gardens is renowed
-      for offering affortable gardening installation and maintainance services including
-      lawn care, edible gardens, flowers, trees, orchards, raised beds, irragtion and much more!
-      Contact us today and get a free consultation. </p>
+      serving the Valley of the Sun for over 15 years.<br> <br>
+      Sustainable Gardens is committed to improving Arizona communites through the installation,
+      upkeep, and implementation of landscaping. <br><br>
+      Sustainable Gardens is renowed for offering affortable gardening serves.
+      Contact us today and get a free consultation. <br><br>
+      Click the Button Below to find out more about our team </p>
+      <div ><a class = "button" href="/pages/about.html">Click Here</a></div>
     </div>
   </div>
 
-  <div class="contact">
-      <h2 class='contact-heading'>Contact Information</h2>
-      <ul>
-        <li>Phone: (602) 534-5678 </li>
-        <li>Email: sustainablegardens.az@gmail.com </li>
+  <div class="services">
+    <div class= "words-2">
+        <h2>Our Services</h2>
+        <p>Sustainable Gardens offers the following services: </p>
+      <ul class ="service-list">
+        <li> Landscaping </li>
+        <li> Lawn Care </li>
+        <li> Hardscaping </li>
+        <li> Draining Solutions </li>
+        <li> Irragation </li>
+        <li> Landscape Lighting </li>
+        <li> Custom Design </li>
       </ul>
+        <p>Click the button below to discover more about or unique services</p>
+        <div ><a class = "button" href="/pages/services.html">Click Here</a></div>
+    </div>
+    <img class="size" src="images/service.jpg">
+  </div>
+
+  <div class = "contact">
+    <img class = "size" src="images/contact.jpg">
+    <div class= "words">
+        <h2> We Want to Hear From You!</h2>
+        <ul class = "no-marks">
+          <li> Have a question?</li>
+          <li> Want to schedule an appointment?</li>
+          <li> Want a free consultation?</li>
+          <li> Want gardening advice?</li>
+        </ul>
+        <p>Let us know! Click the button below for our contact information:</p>
+        <div ><a class = "button" href="/pages/contact.html">Click Here</a></div>
+    </div>
   </div>
 
 <footer>
@@ -87,6 +116,7 @@
           <li><a href="/pages/portfolio.html">Portfolio</a></li>
           <li><a href="/pages/reviews.html">Reviews</a></li>
           <li><a href="/pages/about.html">About</a></li>
+          <li><a href="https:github.com/wesman55/Lab2"</a>GitHub Repository (URL: https:github.com/wesman55/Lab2)</li>
         </ul>
     </div>
     <div class="part=two">
