Added the About Page

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
       <h3> Website Links</h3>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="/pages/portfolio.html">Portfolio</a></li>
-          <li><a href="/pages/reviews.html">Reviews</a></li>
           <li><a href="/pages/about.html">About</a></li>
-          <li><a href="https:github.com/wesman55/Lab2"</a>GitHub Repository (URL: https:github.com/wesman55/Lab2)</li>
+          <li><a href="/pages/services.html">Services</a></li>
+          <li><a href="/pages/contact.html">Contact</a></li>
+          <li><a href="https:github.com/wesman55/Lab2">GitHub Repository (URL: https:github.com/wesman55/Lab2) </a></li>
         </ul>
     </div>
     <div class="part=two">
