The rest of the Pages

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <li> Draining Solutions </li>
         <li> Irragation </li>
         <li> Landscape Lighting </li>
-        <li> Custom Design </li>
+        <li> Many More! </li>
       </ul>
-        <p>Click the button below to discover more about or unique services</p>
+        <p>Click the button below to discover more about our unique services</p>
         <div ><a class = "button" href="/pages/services.html">Click Here</a></div>
     </div>
     <img class="size" src="images/service.jpg">
