--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
   <meta charset='UTF-8'/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="about.css" />
-  <title>Home Page</title>
+  <title>About</title>
 </head>
 
 <body>
@@ -46,11 +46,11 @@
     <div class="words">
       <h2>Our Founder </h2>
       <p>Jeffrey Fairbanks is the owner and creator of Sustainable Gardens <br><br>
-        Jeff began Sustainable Gardens in 2012 after completed a Master Gardener's certification
+        Jeff began Sustainable Gardens in 2005 after completed a Master Gardener's certification
         course at the University of Arizona<br><br>
         Born on a small farm in East Washington, Jeff has always been an expreienced farmer and gardener<br><br>
-        Experienced in business management, Jef began Sustainable Gardens with the goal to bring
-        sustainable edible landscapes to the Arizona community <br><br>
+        Experienced in business management, Jeff began Sustainable Gardens with the goal to bring
+        sustainable and edible landscapes to the Arizona community <br><br>
         Jeff enjoys spending time with his family and watching classic musicals like
         <em> Seven Brides for Seven Brothers</em> and <em> Pete's Dragon</em>
       </p>
@@ -77,7 +77,7 @@
     <div class="words">
       <h2>Our Irrigation Expert </h2>
       <p>Wesley Fairbanks is both the accountant and Irrigation Expert of Sustainable Gardens <br><br>
-        Wesley began working at Sustainable Gardens in 2012 at the start of the company<br><br>
+        Wesley began working at Sustainable Gardens in 2012<br><br>
         Wesley is a student at Brigham Young university and is studying computer Science<br><br>
         Wesley enjoys spenging time with his wife and coding in his freetime.<br><br>
         Wesley is a massive fan of movies and TV shows and can often be found watching shows and
@@ -110,7 +110,7 @@
   <h1>Want to Set Up an Appointment?</h1>
 
   <div class="contact">
-    <p>Contact us! Call <strong> (602) 534-5678</strong> or submit it online by emailing
+    <p>Contact us! Call <strong> (602) 534-5678</strong> or talk to us online by emailing
       <strong>sustainablegardens.az@gmail.com</strong>. </p>
   </div>
 
