--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       Contact us today and get a free consultation. <br><br>
       Click the Button Below to find out more about our team </p>
       <div ><a class = "button" href="/pages/about.html">Click Here</a></div>
+      <br>
     </div>
   </div>
 
@@ -89,6 +90,7 @@
       </ul>
         <p>Click the button below to discover more about our unique services</p>
         <div ><a class = "button" href="/pages/services.html">Click Here</a></div>
+        <br>
     </div>
     <img class="size" src="images/service.jpg">
   </div>
@@ -99,12 +101,15 @@
         <h2> We Want to Hear From You!</h2>
         <ul class = "no-marks">
           <li> Have a question?</li>
+          <li> Have an Emergency?</li>
           <li> Want to schedule an appointment?</li>
           <li> Want a free consultation?</li>
           <li> Want gardening advice?</li>
+          <li>Want to know about our discounts?</li>
         </ul>
         <p>Let us know! Click the button below for our contact information:</p>
         <div ><a class = "button" href="/pages/contact.html">Click Here</a></div>
+        <br>
     </div>
   </div>
 
