Added Names to Footing

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         </ul>
     </div>
     <div class="part=two">
+      Created by: Cayman Williams and Joseph Wesley Fairbanks <br><br>
       All rights reserved © 2020 Sustainable Gardens
     </div>
 </footer>
