--- a/pages/services.html
+++ b/pages/services.html
@@ -133,6 +133,7 @@
             </ul>
         </div>
         <div class="part=two">
+          Created by: Cayman Williams and Joseph Wesley Fairbanks <br><br>
           All rights reserved © 2020 Sustainable Gardens
         </div>
   </footer>
