--- a/pages/about.html
+++ b/pages/about.html
@@ -46,9 +46,9 @@
     <div class="words">
       <h2>Our Founder </h2>
       <p>Jeffrey Fairbanks is the owner and creator of Sustainable Gardens <br><br>
-        Jeff began Sustainable Gardens in 2005 after completed a Master Gardener's certification
+        Jeff began Sustainable Gardens in 2005 after completing a Master Gardener's certification
         course at the University of Arizona<br><br>
-        Born on a small farm in East Washington, Jeff has always been an expreienced farmer and gardener<br><br>
+        Born on a small farm in East Washington, Jeff has always been an experienced farmer and gardener<br><br>
         Experienced in business management, Jeff began Sustainable Gardens with the goal to bring
         sustainable and edible landscapes to the Arizona community <br><br>
         Jeff enjoys spending time with his family and watching classic musicals like
@@ -66,7 +66,7 @@
         criminal justice<br><br>
         Michael has years of experience in both lawn care and general landscape clean-up<br><br>
         Michael is an extreme movie buff and enjoyes bingeing various Netflix shows<br><br>
-        Micahel is currently preparing to serve a mission in Puerto Rico for two years
+        Michael is currently preparing to serve a mission in Puerto Rico for two years
         </p>
     </div>
     <img class="short" src="../images/mo.jpg">
@@ -78,8 +78,8 @@
       <h2>Our Irrigation Expert </h2>
       <p>Wesley Fairbanks is both the accountant and Irrigation Expert of Sustainable Gardens <br><br>
         Wesley began working at Sustainable Gardens in 2012<br><br>
-        Wesley is a student at Brigham Young university and is studying computer Science<br><br>
-        Wesley enjoys spenging time with his wife and coding in his freetime.<br><br>
+        Wesley is a student at Brigham Young University and is studying Computer Science<br><br>
+        Wesley enjoys spending time with his wife and coding in his freetime.<br><br>
         Wesley is a massive fan of movies and TV shows and can often be found watching shows and
         movies late into the night
       </p>
