--- a/pages/login.html
+++ b/pages/login.html
@@ -9,38 +9,38 @@
 </head>
 
 <body>
-  <div class="logo">
-    <img src='/images/logo.png'>
-  </div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navmen">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/reviews.html">Reviews</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About</a>
-        </li>
-      </ul>
-    </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="index.html" class="navbar-brand"><img href="/index.html" src="/images/New Logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/contact.html">Contact</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              <li><a class="nav-link" href="/pages/login.html">Sign In</a></li>
+            </ul>
+          </div>
+      </nav>
+    
   <div class="sign-in">
     <form>
         <h2>Sign-In</h2>
         <p><strong>Email or mobile phone number</strong>
+        <input type="text">
     </form>
   </div>
 
