--- a/pages/services.html
+++ b/pages/services.html
@@ -9,34 +9,31 @@
 </head>
 
 <body>
-  <div class="logo">
-    <img src='../images/logo.png'>
-  </div>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand"></a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="/index.html" class="navbar-brand"><img src="/images/New Logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navmen">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-       <li class="nav-item">
-         <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="services.html">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-    </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/about.html">About</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/pages/services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/contact.html">Contact</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+        </ul>
+      </div>
   </nav>
 
   <h1 class = "title">Services</h1>
