--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <a href="index.html" class="navbar-brand"><img href="/index.html" src="/images/New Logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
       data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/pages/about.html">About</a>
@@ -31,7 +31,6 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li><a class="nav-link" href="/pages/login.html">Sign In</a></li>
         </ul>
       </div>
   </nav>
@@ -98,7 +97,7 @@
         <h2> We Want to Hear From You!</h2>
         <ul class = "no-marks">
           <li> Have a question?</li>
-          <li> Have an Emergency?</li>
+          <li> Have an emergency?</li>
           <li> Want to schedule an appointment?</li>
           <li> Want a free consultation?</li>
           <li> Want gardening advice?</li>
