--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
   <h1 class = "title">Our Team</h1>
 
   <div class="description">
-    <img class="size" src="../images/jeff.jpg">
+    <img class="size" src="../images/Jeff.jpg">
     <div class="words">
       <h2>Our Founder </h2>
       <p>Jeffrey Fairbanks is the owner and creator of Sustainable Gardens <br><br>
@@ -70,7 +70,7 @@
   </div>
 
   <div class="description">
-    <img class="size" src="../images/jewels.jpg">
+    <img class="size" src="../images/Jewels.JPG">
     <div class="words">
       <h2>Our Irrigation Expert </h2>
       <p>Wesley Fairbanks is both the accountant and Irrigation Expert of Sustainable Gardens <br><br>
