--- a/pages/about.html
+++ b/pages/about.html
@@ -39,8 +39,8 @@
   <h1 class = "title">Our Team</h1>
 
   <div class="description">
-    <img class="size" src="../images/Jeff.jpg">
-    <div class="words">
+    <img class="size flex-item-sm flex-item" src="../images/Jeff.jpg">
+    <div class="words flex-item-bg flex-item">
       <h2>Our Founder </h2>
       <p>Jeffrey Fairbanks is the owner and creator of Sustainable Gardens <br><br>
         Jeff began Sustainable Gardens in 2005 after completing a Master Gardener's certification
@@ -48,14 +48,12 @@
         Born on a small farm in East Washington, Jeff has always been an experienced farmer and gardener<br><br>
         Experienced in business management, Jeff began Sustainable Gardens with the goal to bring
         sustainable and edible landscapes to the Arizona community <br><br>
-        Jeff enjoys spending time with his family and watching classic musicals like
-        <em> Seven Brides for Seven Brothers</em> and <em> Pete's Dragon</em>
       </p>
     </div>
   </div>
 
-  <div class="mo">
-    <div class = "words-2">
+  <div class="description">
+    <div class = "words-2 flex-item-bg flex-item">
         <h2>Our Landscape Technician</h2>
         <p>Michael Fairbanks is the head Landscape Technician and responsible for the
         majority of landscape mantainance and installation<br><br>
@@ -66,12 +64,12 @@
         Michael is currently preparing to serve a mission in Puerto Rico for two years
         </p>
     </div>
-    <img class="short" src="../images/mo.jpg">
+    <img class="short flex-item-sm flex-item" src="../images/mo.jpg">
   </div>
 
   <div class="description">
-    <img class="size" src="../images/Jewels.JPG">
-    <div class="words">
+    <img class="size flex-item-sm flex-item" src="../images/Jewels.JPG">
+    <div class="words flex-item-bg flex-item">
       <h2>Our Irrigation Expert </h2>
       <p>Wesley Fairbanks is both the accountant and Irrigation Expert of Sustainable Gardens <br><br>
         Wesley began working at Sustainable Gardens in 2012<br><br>
@@ -122,7 +120,7 @@
             <li><a href="https:github.com/wesman55/Lab2">GitHub Repository (URL: https:github.com/wesman55/Lab2)</a></li>
           </ul>
       </div>
-      <div class="part=two">
+      <div class="part-two">
         Created by: Cayman Williams and Joseph Wesley Fairbanks <br><br>
         All rights reserved © 2020 Sustainable Gardens
       </div>
