bigger text for smaller screens

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,7 +80,7 @@
               <li><a href="https:github.com/wesman55/Lab2">GitHub Repository (URL: https:github.com/wesman55/Lab2)</a></li>
             </ul>
         </div>
-        <div class="part=two">
+        <div class="part-two">
           Created by: Cayman Williams and Joseph Wesley Fairbanks <br><br>
           All rights reserved © 2020 Sustainable Gardens
         </div>
