--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
   <img src="../images/shovel.jpg">
 
   <div class = "description">
-    <h2>Have a Question? What to set an Appointment?</h2>
+    <h2>Have a Question? Want to set an Appointment?</h2>
     <p> <br>Let us know! We want to hear from you! If you have a question call <strong> (602) 534-HELP</strong>
       or email us at <strong>sustainablegardensaz.questions@gmail.com</strong> <br><br>
       If you wish to view our landscape services <a href="services.html"> Click Here</a> <br><br>
